# kindle_app

./: .gitignore  AGENTS.md  README.md  THIRD_PARTY_NOTICES.md  export_kindle_vocab.py  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  vite.config.ts
kindle_vocab_app/: __init__.py  app.py  genre_config.py  kindle_db.py  kindle_device.py  llm_enricher.py  logging_config.py  optimizer_cli.py  processing_state.py  tauri_bridge.py  tsv_schema.py  vocab_optimizer.py
kindle_vocab_app/config/: processing.toml
scripts/: serve-dist.mjs
src/: index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  progress.tsx  select.tsx
src/design/: tokens.ts
src/lib/: backend.ts
