[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kindle-vocab-app"
version = "0.1.0"
description = "Cross-platform desktop app for previewing, filtering, and exporting Kindle Vocabulary Builder data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.8,<7",
    "pywin32>=311; sys_platform == 'win32'",
    "nltk>=3.9,<4",
    "wordfreq>=3.1,<4",
    "wordninja>=2,<3",
]

[tool.setuptools.package-data]
kindle_vocab_app = ["assets/icons/*.svg", "config/*.toml"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "ruff>=0.11,<1",
]

[project.scripts]
kindle-vocab-app = "kindle_vocab_app.app:main"
kindle-vocab-optimize = "kindle_vocab_app.optimizer_cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"
